@@ -575,7 +575,7 @@
 				<control type="button" id="707">
 					<label>$LOCALIZE[31024]</label>
 					<include>DefaultSettingButton</include>
-					<onclick>Skin.SelectBool(31024, 38018|circle_userrating, 563|circle_rating, 16018|)</onclick>
+					<onclick>Skin.SelectBool(31024, 16018|, 563|circle_rating, 38018|circle_userrating)</onclick>
 					<label2>$VAR[RatingSettingLabel2Var]</label2>
 				</control>
 				<control type="radiobutton" id="708">
