@@ -1,4 +1,5 @@
 [B]2.1.5[/B]
+• Add ratings/user ratings in list views
 • Minor fixes
 
 [B]2.1.4[/B]
